fixed button horizontal alignment

--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -5,6 +5,9 @@
     width: 100%;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
   }
 
 button
@@ -16,7 +19,7 @@ button
     width: 20%;
     border: none;
     border-radius: 4px;
-    text-align: right;
+    text-align: center;
   }
 
 button:hover
